0.04
 - Add 'readme_from' directive to Makefile.PL.
 - Fix LICENSE file.
 - Remove diacritics from author name.
 - Update Module::Install to 1.16 version.

0.03 2013-09-21
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.02 2013-08-19
 - Add Error::Pure::Always to SEE ALSO section in doc.
 - Add LICENSE file.
 - Fix test bug, when test use Test::Output::is_stdout (and Capture::Tiny)
   for capture err via eval.

0.01 2013-06-11
 - First version.