@@ -9,8 +9,6 @@ build_requires:
   IO::Scalar: 0
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -26,6 +24,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Error::Pure::Utils: 0.09
   Exporter: 0
