@@ -8,9 +8,14 @@ use inc::Module::Install;
 # Definition.
 abstract 'Error::Pure module for simple print instead die.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.05;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Error-Pure-NoDie';
 readme_from 'NoDie.pm';
+recursive_author_tests('xt');
 requires 'Error::Pure::Utils' => 0.09;
 requires 'Exporter' => 0;
 requires 'List::MoreUtils' => 0;
@@ -25,8 +30,6 @@ test_requires 'File::Object' => 0.05;
 test_requires 'IO::Scalar' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.04';
 
