@@ -1,6 +1,7 @@
 0.04
  - Add 'readme_from' directive to Makefile.PL.
  - Fix LICENSE file.
+ - Move author tests to xt/ directory.
  - Remove diacritics from author name.
  - Update Module::Install to 1.16 version.
 
